--- a/DS_ArthurGOAREGUER/Views/Home/Index.cshtml
+++ b/DS_ArthurGOAREGUER/Views/Home/Index.cshtml
@@ -10,35 +10,29 @@
     </ol>
     <div class="carousel-inner" role="listbox">
         <div class="item active">
-            <img src="~/images/banner1.svg" alt="ASP.NET" class="img-responsive" />
+            <img src="~/images/organisation.png" alt="" class="img-responsive" />
             <div class="carousel-caption" role="option">
                 <p>
-                    Learn how to build ASP.NET apps that can run anywhere.
-                    <a class="btn btn-default" href="https://go.microsoft.com/fwlink/?LinkID=525028&clcid=0x409">
-                        Learn More
-                    </a>
+                    Voir la liste des membres de l'organisation<br />
+                    <a class="btn btn-default" asp-area="" asp-controller="Organisations" asp-action="Index">Organisation</a>
                 </p>
             </div>
         </div>
         <div class="item">
-            <img src="~/images/banner2.svg" alt="Visual Studio" class="img-responsive" />
+            <img src="~/images/joueurs.png" alt="" class="img-responsive" />
             <div class="carousel-caption" role="option">
                 <p>
-                    There are powerful new features in Visual Studio for building modern web apps.
-                    <a class="btn btn-default" href="https://go.microsoft.com/fwlink/?LinkID=525030&clcid=0x409">
-                        Learn More
-                    </a>
+                    Ajouter un participant<br />
+                    <a class="btn btn-default" asp-area="" asp-controller="Participants" asp-action="Create">Ajouter</a>
                 </p>
             </div>
         </div>
         <div class="item">
-            <img src="~/images/banner3.svg" alt="Microsoft Azure" class="img-responsive" />
+            <img src="~/images/joueurs2.png" alt="" class="img-responsive" />
             <div class="carousel-caption" role="option">
                 <p>
-                    Learn how Microsoft's Azure cloud platform allows you to build, deploy, and scale web apps.
-                    <a class="btn btn-default" href="https://go.microsoft.com/fwlink/?LinkID=525027&clcid=0x409">
-                        Learn More
-                    </a>
+                    Ajouter un résultat<br />
+                    <a class="btn btn-default" asp-area="" asp-controller="Resultats" asp-action="Create">Ajouter</a>
                 </p>
             </div>
         </div>
@@ -54,41 +48,28 @@
 </div>
 
 <div class="row">
-    <div class="col-md-3">
-        <h2>Application uses</h2>
+    <div class="col-md-4">
+        <h2>Données de base</h2>
         <ul>
-            <li>Sample pages using ASP.NET Core MVC</li>
-            <li>Theming using <a href="https://go.microsoft.com/fwlink/?LinkID=398939">Bootstrap</a></li>
+            <li><a asp-area="" asp-controller="Tournois" asp-action="Index">Liste des tournois</a></li>
+            <li><a asp-area="" asp-controller="Postes" asp-action="Index">Liste des postes</a></li>
+            <li><a asp-area="" asp-controller="Jeux" asp-action="Index">Liste des jeux</a></li>
         </ul>
     </div>
-    <div class="col-md-3">
-        <h2>How to</h2>
+    <div class="col-md-4">
+        <h2>Personnes</h2>
         <ul>
-            <li><a href="https://go.microsoft.com/fwlink/?LinkID=398600">Add a Controller and View</a></li>
-            <li><a href="https://go.microsoft.com/fwlink/?LinkId=699315">Manage User Secrets using Secret Manager.</a></li>
-            <li><a href="https://go.microsoft.com/fwlink/?LinkId=699316">Use logging to log a message.</a></li>
-            <li><a href="https://go.microsoft.com/fwlink/?LinkId=699317">Add packages using NuGet.</a></li>
-            <li><a href="https://go.microsoft.com/fwlink/?LinkId=699319">Target development, staging or production environment.</a></li>
+            <li><a asp-area="" asp-controller="Personnes" asp-action="Index">Liste des personnes</a></li>
+            <li><a asp-area="" asp-controller="Participants" asp-action="Index">Liste des participants</a></li>
+            <li><a asp-area="" asp-controller="Organisations" asp-action="Index">Liste des membres de l'organisation</a></li>
         </ul>
     </div>
-    <div class="col-md-3">
-        <h2>Overview</h2>
+    <div class="col-md-4">
+        <h2>Match</h2>
         <ul>
-            <li><a href="https://go.microsoft.com/fwlink/?LinkId=518008">Conceptual overview of what is ASP.NET Core</a></li>
-            <li><a href="https://go.microsoft.com/fwlink/?LinkId=699320">Fundamentals of ASP.NET Core such as Startup and middleware.</a></li>
-            <li><a href="https://go.microsoft.com/fwlink/?LinkId=398602">Working with Data</a></li>
-            <li><a href="https://go.microsoft.com/fwlink/?LinkId=398603">Security</a></li>
-            <li><a href="https://go.microsoft.com/fwlink/?LinkID=699321">Client side development</a></li>
-            <li><a href="https://go.microsoft.com/fwlink/?LinkID=699322">Develop on different platforms</a></li>
-            <li><a href="https://go.microsoft.com/fwlink/?LinkID=699323">Read more on the documentation site</a></li>
-        </ul>
-    </div>
-    <div class="col-md-3">
-        <h2>Run &amp; Deploy</h2>
-        <ul>
-            <li><a href="https://go.microsoft.com/fwlink/?LinkID=517851">Run your app</a></li>
-            <li><a href="https://go.microsoft.com/fwlink/?LinkID=517853">Run tools such as EF migrations and more</a></li>
-            <li><a href="https://go.microsoft.com/fwlink/?LinkID=398609">Publish to Microsoft Azure Web Apps</a></li>
+            <li><a asp-area="" asp-controller="Tournois" asp-action="Index">Liste des tournois</a></li>
+            <li><a asp-area="" asp-controller="Championnats" asp-action="Index">Liste des championnats</a></li>
+            <li><a asp-area="" asp-controller="Resultats" asp-action="Index">Liste des résultats</a></li>
         </ul>
     </div>
 </div>
