--- a/DS_ArthurGOAREGUER/Views/Resultats/Details.cshtml
+++ b/DS_ArthurGOAREGUER/Views/Resultats/Details.cshtml
@@ -1,13 +1,13 @@
 ﻿@model DS_ArthurGOAREGUER.Models.Resultat
 
 @{
-    ViewData["Title"] = "Details";
+    ViewData["Title"] = "Détails";
 }
 
-<h2>Details</h2>
+<h2>Détails</h2>
 
 <div>
-    <h4>Resultat</h4>
+    <h4>Résultat</h4>
     <hr />
     <dl class="dl-horizontal">
         <dt>
@@ -20,13 +20,13 @@
             @Html.DisplayNameFor(model => model.Personne1)
         </dt>
         <dd>
-            @Html.DisplayFor(model => model.Personne1.DateNaissance)
+            @Html.DisplayFor(model => model.Personne1.PrenomNom)
         </dd>
         <dt>
             @Html.DisplayNameFor(model => model.Personne2)
         </dt>
         <dd>
-            @Html.DisplayFor(model => model.Personne2.DateNaissance)
+            @Html.DisplayFor(model => model.Personne2.PrenomNom)
         </dd>
         <dt>
             @Html.DisplayNameFor(model => model.Score1)
@@ -49,6 +49,6 @@
     </dl>
 </div>
 <div>
-    <a asp-action="Edit" asp-route-id="@Model.Id">Edit</a> |
-    <a asp-action="Index">Back to List</a>
+    <a asp-action="Edit" asp-route-id="@Model.Id">Modifier</a> |
+    <a asp-action="Index">Retour</a>
 </div>
