--- a/DS_ArthurGOAREGUER/Views/Championnats/Delete.cshtml
+++ b/DS_ArthurGOAREGUER/Views/Championnats/Delete.cshtml
@@ -1,12 +1,12 @@
 ﻿@model DS_ArthurGOAREGUER.Models.Championnat
 
 @{
-    ViewData["Title"] = "Delete";
+    ViewData["Title"] = "Supprimer";
 }
 
-<h2>Delete</h2>
+<h2>Supprimer</h2>
 
-<h3>Are you sure you want to delete this?</h3>
+<h3>Êtes-vous sûr de vouloir supprimer ceci ?</h3>
 <div>
     <h4>Championnat</h4>
     <hr />
@@ -33,7 +33,7 @@
     
     <form asp-action="Delete">
         <input type="hidden" asp-for="Id" />
-        <input type="submit" value="Delete" class="btn btn-default" /> |
-        <a asp-action="Index">Back to List</a>
+        <input type="submit" value="Supprimer" class="btn btn-default" /> |
+        <a asp-action="Index">Retour</a>
     </form>
 </div>
