--- a/DS_ArthurGOAREGUER/Views/Championnats/Index.cshtml
+++ b/DS_ArthurGOAREGUER/Views/Championnats/Index.cshtml
@@ -1,13 +1,13 @@
 ﻿@model IEnumerable<DS_ArthurGOAREGUER.Models.Championnat>
 
 @{
-    ViewData["Title"] = "Index";
+    ViewData["Title"] = "Championnats";
 }
 
-<h2>Index</h2>
+<h2>Championnats</h2>
 
 <p>
-    <a asp-action="Create">Create New</a>
+    <a asp-action="Create">Nouveau</a>
 </p>
 <table class="table">
     <thead>
@@ -37,9 +37,9 @@
                 @Html.DisplayFor(modelItem => item.Nom)
             </td>
             <td>
-                <a asp-action="Edit" asp-route-id="@item.Id">Edit</a> |
-                <a asp-action="Details" asp-route-id="@item.Id">Details</a> |
-                <a asp-action="Delete" asp-route-id="@item.Id">Delete</a>
+                <a asp-action="Edit" asp-route-id="@item.Id">Modifier</a> |
+                <a asp-action="Details" asp-route-id="@item.Id">Détails</a> |
+                <a asp-action="Delete" asp-route-id="@item.Id">Supprimer</a>
             </td>
         </tr>
 }
