--- a/DS_ArthurGOAREGUER/Views/Jeux/Details.cshtml
+++ b/DS_ArthurGOAREGUER/Views/Jeux/Details.cshtml
@@ -1,13 +1,13 @@
 ﻿@model DS_ArthurGOAREGUER.Models.Jeux
 
 @{
-    ViewData["Title"] = "Details";
+    ViewData["Title"] = "Détails";
 }
 
-<h2>Details</h2>
+<h2>Détails</h2>
 
 <div>
-    <h4>Jeux</h4>
+    <h4>Jeu</h4>
     <hr />
     <dl class="dl-horizontal">
         <dt>
@@ -19,6 +19,6 @@
     </dl>
 </div>
 <div>
-    <a asp-action="Edit" asp-route-id="@Model.Id">Edit</a> |
-    <a asp-action="Index">Back to List</a>
+    <a asp-action="Edit" asp-route-id="@Model.Id">Modifier</a> |
+    <a asp-action="Index">Retour</a>
 </div>
