--- a/DS_ArthurGOAREGUER/Views/Organisations/Create.cshtml
+++ b/DS_ArthurGOAREGUER/Views/Organisations/Create.cshtml
@@ -1,10 +1,10 @@
 ﻿@model DS_ArthurGOAREGUER.Models.Organisation
 
 @{
-    ViewData["Title"] = "Create";
+    ViewData["Title"] = "Nouveau";
 }
 
-<h2>Create</h2>
+<h2>Nouveau</h2>
 
 <h4>Organisation</h4>
 <hr />
@@ -25,14 +25,14 @@
                 <select asp-for="PosteId" class ="form-control" asp-items="ViewBag.PosteId"></select>
             </div>
             <div class="form-group">
-                <input type="submit" value="Create" class="btn btn-default" />
+                <input type="submit" value="Enregistrer" class="btn btn-default" />
             </div>
         </form>
     </div>
 </div>
 
 <div>
-    <a asp-action="Index">Back to List</a>
+    <a asp-action="Index">Retour</a>
 </div>
 
 @section Scripts {
