--- a/DS_ArthurGOAREGUER/Views/Organisations/Index.cshtml
+++ b/DS_ArthurGOAREGUER/Views/Organisations/Index.cshtml
@@ -1,13 +1,13 @@
 ﻿@model IEnumerable<DS_ArthurGOAREGUER.Models.Organisation>
 
 @{
-    ViewData["Title"] = "Index";
+    ViewData["Title"] = "Organisations";
 }
 
-<h2>Index</h2>
+<h2>Organisations</h2>
 
 <p>
-    <a asp-action="Create">Create New</a>
+    <a asp-action="Create">Nouveau</a>
 </p>
 <table class="table">
     <thead>
@@ -31,15 +31,15 @@
                 @Html.DisplayFor(modelItem => item.Tournoi.Description)
             </td>
             <td>
-                @Html.DisplayFor(modelItem => item.Personne.DateNaissance)
+                @Html.DisplayFor(modelItem => item.Personne.PrenomNom)
             </td>
             <td>
                 @Html.DisplayFor(modelItem => item.Poste.Nom)
             </td>
             <td>
-                <a asp-action="Edit" asp-route-id="@item.Id">Edit</a> |
-                <a asp-action="Details" asp-route-id="@item.Id">Details</a> |
-                <a asp-action="Delete" asp-route-id="@item.Id">Delete</a>
+                <a asp-action="Edit" asp-route-id="@item.Id">Modifier</a> |
+                <a asp-action="Details" asp-route-id="@item.Id">Détails</a> |
+                <a asp-action="Delete" asp-route-id="@item.Id">Supprimer</a>
             </td>
         </tr>
 }
