--- a/DS_ArthurGOAREGUER/Views/Participants/Create.cshtml
+++ b/DS_ArthurGOAREGUER/Views/Participants/Create.cshtml
@@ -1,10 +1,10 @@
 ﻿@model DS_ArthurGOAREGUER.Models.Participant
 
 @{
-    ViewData["Title"] = "Create";
+    ViewData["Title"] = "Nouveau";
 }
 
-<h2>Create</h2>
+<h2>Nouveau</h2>
 
 <h4>Participant</h4>
 <hr />
@@ -26,14 +26,14 @@
                 <span asp-validation-for="Equipe" class="text-danger"></span>
             </div>
             <div class="form-group">
-                <input type="submit" value="Create" class="btn btn-default" />
+                <input type="submit" value="Enregistrer" class="btn btn-default" />
             </div>
         </form>
     </div>
 </div>
 
 <div>
-    <a asp-action="Index">Back to List</a>
+    <a asp-action="Index">Retour</a>
 </div>
 
 @section Scripts {
