--- a/DS_ArthurGOAREGUER/Views/Participants/Edit.cshtml
+++ b/DS_ArthurGOAREGUER/Views/Participants/Edit.cshtml
@@ -1,10 +1,10 @@
 ﻿@model DS_ArthurGOAREGUER.Models.Participant
 
 @{
-    ViewData["Title"] = "Edit";
+    ViewData["Title"] = "Modifier";
 }
 
-<h2>Edit</h2>
+<h2>Modifier</h2>
 
 <h4>Participant</h4>
 <hr />
@@ -29,14 +29,14 @@
                 <span asp-validation-for="Equipe" class="text-danger"></span>
             </div>
             <div class="form-group">
-                <input type="submit" value="Save" class="btn btn-default" />
+                <input type="submit" value="Enregistrer" class="btn btn-default" />
             </div>
         </form>
     </div>
 </div>
 
 <div>
-    <a asp-action="Index">Back to List</a>
+    <a asp-action="Index">Retour</a>
 </div>
 
 @section Scripts {
