--- a/DS_ArthurGOAREGUER/Views/Personnes/Details.cshtml
+++ b/DS_ArthurGOAREGUER/Views/Personnes/Details.cshtml
@@ -1,10 +1,10 @@
 ﻿@model DS_ArthurGOAREGUER.Models.Personne
 
 @{
-    ViewData["Title"] = "Details";
+    ViewData["Title"] = "Détails";
 }
 
-<h2>Details</h2>
+<h2>Détails</h2>
 
 <div>
     <h4>Personne</h4>
@@ -49,6 +49,6 @@
     </dl>
 </div>
 <div>
-    <a asp-action="Edit" asp-route-id="@Model.Id">Edit</a> |
-    <a asp-action="Index">Back to List</a>
+    <a asp-action="Edit" asp-route-id="@Model.Id">Modifier</a> |
+    <a asp-action="Index">Retour</a>
 </div>
