--- a/DS_ArthurGOAREGUER/Views/Personnes/Edit.cshtml
+++ b/DS_ArthurGOAREGUER/Views/Personnes/Edit.cshtml
@@ -1,10 +1,10 @@
 ﻿@model DS_ArthurGOAREGUER.Models.Personne
 
 @{
-    ViewData["Title"] = "Edit";
+    ViewData["Title"] = "Modifier";
 }
 
-<h2>Edit</h2>
+<h2>Modifier</h2>
 
 <h4>Personne</h4>
 <hr />
@@ -40,18 +40,21 @@
             </div>
             <div class="form-group">
                 <label asp-for="Sexe" class="control-label"></label>
-                <input asp-for="Sexe" class="form-control" />
+                <select asp-for="Sexe" class="form-control">
+                    <option value="F">Femme</option>
+                    <option value="H">Homme</option>
+                </select>
                 <span asp-validation-for="Sexe" class="text-danger"></span>
             </div>
             <div class="form-group">
-                <input type="submit" value="Save" class="btn btn-default" />
+                <input type="submit" value="Enregistrer" class="btn btn-default" />
             </div>
         </form>
     </div>
 </div>
 
 <div>
-    <a asp-action="Index">Back to List</a>
+    <a asp-action="Index">Retour</a>
 </div>
 
 @section Scripts {
