--- a/DS_ArthurGOAREGUER/Views/Resultats/Index.cshtml
+++ b/DS_ArthurGOAREGUER/Views/Resultats/Index.cshtml
@@ -1,13 +1,13 @@
 ﻿@model IEnumerable<DS_ArthurGOAREGUER.Models.Resultat>
 
 @{
-    ViewData["Title"] = "Index";
+    ViewData["Title"] = "Résultats";
 }
 
-<h2>Index</h2>
+<h2>Résultats</h2>
 
 <p>
-    <a asp-action="Create">Create New</a>
+    <a asp-action="Create">Nouveau</a>
 </p>
 <table class="table">
     <thead>
@@ -40,10 +40,10 @@
                 @Html.DisplayFor(modelItem => item.Championnat.Nom)
             </td>
             <td>
-                @Html.DisplayFor(modelItem => item.Personne1.DateNaissance)
+                @Html.DisplayFor(modelItem => item.Personne1.PrenomNom)
             </td>
             <td>
-                @Html.DisplayFor(modelItem => item.Personne2.DateNaissance)
+                @Html.DisplayFor(modelItem => item.Personne2.PrenomNom)
             </td>
             <td>
                 @Html.DisplayFor(modelItem => item.Score1)
@@ -55,9 +55,9 @@
                 @Html.DisplayFor(modelItem => item.DateDebut)
             </td>
             <td>
-                <a asp-action="Edit" asp-route-id="@item.Id">Edit</a> |
-                <a asp-action="Details" asp-route-id="@item.Id">Details</a> |
-                <a asp-action="Delete" asp-route-id="@item.Id">Delete</a>
+                <a asp-action="Edit" asp-route-id="@item.Id">Modifier</a> |
+                <a asp-action="Details" asp-route-id="@item.Id">Détails</a> |
+                <a asp-action="Delete" asp-route-id="@item.Id">Supprimer</a>
             </td>
         </tr>
 }
