--- a/DS_ArthurGOAREGUER/Views/Tournois/Create.cshtml
+++ b/DS_ArthurGOAREGUER/Views/Tournois/Create.cshtml
@@ -1,10 +1,10 @@
 ﻿@model DS_ArthurGOAREGUER.Models.Tournoi
 
 @{
-    ViewData["Title"] = "Create";
+    ViewData["Title"] = "Nouveau";
 }
 
-<h2>Create</h2>
+<h2>Nouveau</h2>
 
 <h4>Tournoi</h4>
 <hr />
@@ -19,7 +19,7 @@
             </div>
             <div class="form-group">
                 <label asp-for="Description" class="control-label"></label>
-                <input asp-for="Description" class="form-control" />
+                <textarea asp-for="Description" class="form-control"></textarea>
                 <span asp-validation-for="Description" class="text-danger"></span>
             </div>
             <div class="form-group">
@@ -28,14 +28,14 @@
                 <span asp-validation-for="Lieux" class="text-danger"></span>
             </div>
             <div class="form-group">
-                <input type="submit" value="Create" class="btn btn-default" />
+                <input type="submit" value="Enregistrer" class="btn btn-default" />
             </div>
         </form>
     </div>
 </div>
 
 <div>
-    <a asp-action="Index">Back to List</a>
+    <a asp-action="Index">Retour</a>
 </div>
 
 @section Scripts {
